hpa-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-09-03T15:58:51Z"
  generation: 2
  labels:
    app: hpa-dep
  name: hpa-dep
  namespace: default
  resourceVersion: "88566"
  uid: 51d10c7b-a9b0-478c-b552-11dcf87e18fe
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hpa-dep
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hpa-dep
    spec:
      containers:
      - image: registry.k8s.io/hpa-example
        imagePullPolicy: Always
        name: hpa-example
        resources:
          requests:
            cpu: 200m
          limits:
            cpu: 500m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2025-09-03T15:58:51Z"
    lastUpdateTime: "2025-09-03T15:59:01Z"
    message: ReplicaSet "hpa-dep-9bd46fff6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-09-03T16:02:06Z"
    lastUpdateTime: "2025-09-03T16:02:06Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
