pod-secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-env
spec:
  containers:
  - image: nginx
    name: nginx-pod
