pod-secret-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-pod
  name: nginx-pod
spec:
  volumes:
  - name: secret-volume
    secret:
      secretName: auth-secret
  containers:
  - image: nginx
    name: nginx-pod
    volumeMounts:
    - name: secret-volume
      mountPath: "/etc/secret-volume"
