pod-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
  - command:
    - sleep
    - "36000"
    image: busybox
    name: container-1
    volumeMounts:
    - name: shared-volume
      mountPath: /shared/data
  - command:
    - sleep
    - "36000"
    image: busybox
    name: container-2
    volumeMounts:
    - name: shared-volume
      mountPath: /shared/data
  volumes:
  - name: shared-volume
    emptyDir: {}
