pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: ngix-labeled
  name: ngix-labeled
spec:
  containers:
  - image: nginx
    name: ngix-labeled
  nodeSelector:
    size: Large
  priorityClassName: "high-priority"
