endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: simple-service
subsets:
  - addresses:
      - ip: 10.42.3.14
      - ip: 10.42.3.15
    ports:
      - port: 80
