nginx-dep-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-dep
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: nginx-dep
