named-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: path-based-ingress-2
spec:
  rules:
  - host: example.internal
    http:
      paths:
      - backend:
          service:
            name: app-1-service
            port:
              number: 80
        path: /app1
        pathType: Exact
      - backend:
          service:
            name: app-2-service
            port:
              number: 80
        path: /app2
        pathType: Exact
